<?xml version="1.0" encoding="utf-8"?>
<resources>
    <string name="app_name">录音机</string>
    <string name="start_recording">开始录音</string>
    <string name="pause_recording">暂停录音</string>
    <string name="stop_recording">终止录音</string>
    <string name="time_mark">时间标记</string>
    <string name="take_photo">拍照</string>
    <string name="play">播放</string>
    <string name="pause">暂停</string>
    <string name="forward_3s">快进3秒</string>
    <string name="rewind_3s">后退3秒</string>
    <string name="no_recordings">暂无录音</string>
    <string name="recording_in_progress">录制中…</string>
    <string name="long_press_to_stop">长按3秒终止录音</string>
</resources>
